2003-03-16  dodji  <dodji@seketeli.org>

	* src/cr-style.c (set_border_x_style_from_value): 
	new method added to gather 'border_top_style' ... 'border_left_style'
	properties value from the css stylesheet.
	
	(set_border_x_width_from_value): completed this function
	to properly gather 'border_top_width' ... 'border_left_width'
	properties values from the css stylesheet.

	* src/cr-num.c (cr_num_set): new method added.

2003-03-15  dodji  <dodji@seketeli.org>

	* src/cr-utils.[ch]
	added some new helper functions/did some cleanups.
	
	* src/cr-tknzr.[ch]:
	made the necessary modifs implied by the new CRNum/CRTerm type
	system.

	* src/cr-term.[ch]:
	big cleanup of the CRTerm/CRNum typing system.

	* src/cr-style.[ch]:
	went forward in the style data structure population code.

	* src/rgb.[ch]:
	made the necessary modifs implied by the new CRNum type
	system
	
	* src/cr-parser.c:
	made the necessary modifs implied by the new CRNum type
	system

	* src/cr-num.[ch]: did some big changes for a better
	handling of numeric types.

2003-03-05  Dodji  <dodji@seketeli.org>

	* src/cr-parser.c (cr_parser_new_from_buf): 
	new method to parse stylesheets from in memory buffers.

2003-03-04  Dodji  <dodji@seketeli.og>

	* src/cr-input.c (cr_input_new_from_buf): 
	added this new method to instanciate an input stream from
	an in memory buffer.
	(cr_input_new_from_uri): modified this method to make it
	use the new cr_input_new_from_buf() method.

2003-03-03  Dodji  <dodji@seketeli.org>

	* tests/README-description.txt: 
	added this test description file in the project.
	
	* src/cr-sel-eng.c (cr_sel_eng_get_matched_rulesets_real): 
	renamed the function cr_sel_eng_get_rulesets_real() into
	this new one. Modified it memory management model so that 
	1/ it does not allocate it output array
	2/ caller can use it in a incremental way and get the rulesets
	chunck by chunk.
	(cr_sel_eng_sel_get_matched_rulesets): 
	added this public interface based on the private interface