@@ -12,9 +12,6 @@ LIBCROCO_VERSION_INFO=$LIBCROCO_MAJOR_VERSION:$LIBCROCO_MINOR_VERSION:$LIBCROCO_
 LIBCROCO_VERSION_NUMBER=`expr "$LIBCROCO_MAJOR_VERSION \* 10000 +$LIBCROCO_MINOR_VERSION \* 100 + $LIBCROCO_MICRO_VERSION"`
 VERSION=$LIBCROCO_VERSION
 
-USE_LIBXML2=no
-WITH_SELENG=no
-
 AC_SUBST(LIBCROCO_MAJOR_VERSION)
 AC_SUBST(LIBCROCO_MINOR_VERSION)
 AC_SUBST(LIBCROCO_MICRO_VERSION)
@@ -25,6 +22,8 @@ AC_SUBST(VERSION)
 
 AM_INIT_AUTOMAKE($PACKAGE, $LIBCROCO_VERSION)
 AM_CONFIG_HEADER(libcroco-config.h)
+
+AM_MAINTAINER_MODE
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -47,20 +46,6 @@ dnl check for the different --enable-option=val
 dnl messages issued by the user
 dnl ***************************************************************
 
-dnl -
-dnl --enable-seleng
-dnl this option enables compilation of the selection engine
-AC_ARG_ENABLE(seleng, 
-	       AC_HELP_STRING([--enable-seleng=yes|no], 
-	                      [Enables the css2 selector engine based on libxml2. Default=yes]),
-	       WITH_SELENG=$enableval,
-	       WITH_SELENG="yes")
-
-if test "$WITH_SELENG" = "yes" ; then
-	USE_LIBXML2=yes
-	AC_DEFINE(WITH_SELENG, 1, [use css2 selection engine])
-fi
-
 AC_ARG_ENABLE(checks,
 		AC_HELP_STRING([--enable-checks=yes|no],
 	 	[enables runtime safety checks. Default=yes]),
@@ -70,8 +55,6 @@ AC_ARG_ENABLE(checks,
 if test "$WITH_CHECKS" = "no" ; then
 	AC_DEFINE(G_DISABLE_CHECKS, 1, [disable runtime asserts])
 fi
-
-AC_SUBST(WITH_SELENG)
 
 dnl ************************************************
 dnl end of check of the different --enable-feature options
@@ -86,49 +69,35 @@ if test x$PKG_CONFIG = xno ; then
   AC_MSG_ERROR([*** pkg-config not found. See http://www.freedesktop.org/software/pkgconfig/])
 fi
 
-
 dnl check libxml2 version
-if test "$USE_LIBXML2" = "yes" ; then
-    dnl
-    dnl Find awk
-    dnl
+have_libxml2=no
+PKG_CHECK_MODULES(LIBXML2, [libxml2 >= 2.5.1], 
+			   [have_libxml2=yes
+			   AC_DEFINE(HAVE_LIBXML2, 1, [use libxml2])], have_libxml2=no)
+			    
+dnl -
+dnl --enable-seleng
+dnl this option enables compilation of the selection engine
+WITH_SELENG=no
+AC_ARG_ENABLE(seleng, 
+	       AC_HELP_STRING([--enable-seleng=yes|no|auto], 
+	                      [Enables the css2 selector engine based on libxml2. Default=auto]),
+	       WITH_SELENG=$enableval,
+	       WITH_SELENG="auto")
 
-    AC_PROG_AWK
-
-    AC_MSG_CHECKING([checking for libxml2])
-
-    LIBXML_MAJOR=2
-    LIBXML_MINOR=5
-    LIBXML_MICRO=1
-    LIBXML=`pkg-config --list-all|grep libxml-2.0`
-    if test "empty$LIBXML" = "empty" ; then
-    	AC_MSG_ERROR([*** libxml2 not found. See http://xmlsoft.org. Make sure "pkg-config --modversion libxml2" prints at least $LIBXML_MAJOR.$LIBXML_MINOR.$LIBXML_MICRO]) ;	
-    fi
-    LIBXML_VERSION=`pkg-config --modversion libxml-2.0`
-
-    MAJOR=`echo $LIBXML_VERSION |awk 'BEGIN {FS="."} {print $1}'`
-    MINOR=`echo $LIBXML_VERSION |awk 'BEGIN {FS="."} {print $2}'`
-    MICRO=`echo $LIBXML_VERSION |awk 'BEGIN {FS="."} {print $3}'`
-    LIBXML_VERSION=$MAJOR.$MINOR.$MICRO
-
-    if test "$LIBXML_MAJOR" -lt "2" ; then
-    	AC_MSG_ERROR([libxml2 version at least $LIBXML_MAJOR.$LIBXML_MINOR.$LIBXML_MICRO required. Found version $LIBXML_VERSION])
-    fi
-
-    if test "$LIBXML_MINOR" -gt "$MINOR" ; then
-    	AC_MSG_ERROR([libxml2 version at least $LIBXML_MAJOR.$LIBXML_MINOR.$LIBXML_MICRO required. Found version $LIBXML_VERSION])
-    fi
-
-    if test "$LIBXML_MICRO" -gt "$MICRO" ; then
-    	AC_MSG_ERROR([libxml2 version at least $LIBXML_MAJOR.$LIBXML_MINOR.$LIBXML_MICRO required]. Found version $LIBXML_VERSION)
-    fi
-    
-    AC_DEFINE(HAVE_LIBXML2, 1, [use libxml2])
-    AC_MSG_RESULT([yes])
+if test "$WITH_SELENG" != no ; then
+   if test "$have_libxml2" != no; then
+	AC_DEFINE(WITH_SELENG, 1, [use css2 selection engine])
+   else
+	WITH_SELENG=no
+   fi
 fi
 
+AC_SUBST(WITH_SELENG)
+AM_CONDITIONAL(HAVE_SELENG, test $WITH_SELENG != no)
+
 dnl By default compile in debug mode
-CFLAGS="-g -Wunused -Wimplicit -Wreturn-type -Wswitch -Wcomment -Wtrigraphs -Wformat -Wchar-subscripts  -Wparentheses -Wpointer-arith -Wcast-align -Wwrite-strings -Waggregate-return -Wstrict-prototypes -Wmissing-prototypes -Wnested-externs -Winline -Wredundant-decls "
+CFLAGS="-Wunused -Wimplicit -Wreturn-type -Wswitch -Wcomment -Wtrigraphs -Wformat -Wchar-subscripts  -Wparentheses -Wpointer-arith -Wcast-align -Wwrite-strings -Waggregate-return -Wstrict-prototypes -Wmissing-prototypes -Wnested-externs -Winline -Wredundant-decls "
 #-pedantic -Wshadow -0 -Wuninitialized
 
 CROCO_LIBS="-L${libdir} -lcroco `pkg-config --libs glib-2.0`"
