@@ -1,12 +1,12 @@
-#SUBDIRS=test-inputs
+#TODO: conditionally compile test5
+noinst_PROGRAMS=test0 test1 test2 test3 test4 #test5
 
-noinst_PROGRAMS=test0 test1 test2 test3 test4 test5
 test0_SOURCES=test0-main.c 
 test1_SOURCES=test1-main.c 
 test2_SOURCES=test2-main.c cr-test-utils.c cr-test-utils.h
 test3_SOURCES=test3-main.c cr-test-utils.c cr-test-utils.h
 test4_SOURCES=test4-main.c cr-test-utils.c cr-test-utils.h
-test5_SOURCES=test5-main.c cr-test-utils.c cr-test-utils.h
+#test5_SOURCES=test5-main.c cr-test-utils.c cr-test-utils.h
 
 LDADD=$(top_srcdir)/src/libcroco.la
 
